--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5145,6 +5145,7 @@ and (max-width : 667px) {
     top: 0;
     left: 0;
     width: 100%;
+    position: static;
 }
 
 .draw-signature--canvas-text-wrapper--invisible {
@@ -5176,6 +5177,7 @@ and (max-width : 667px) {
     cursor: crosshair;
     -ms-touch-action: none;
         touch-action: none;
+    position: relative;
     z-index: 1;
 }
 
