--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5177,6 +5177,7 @@ and (max-width : 667px) {
     cursor: crosshair;
     -ms-touch-action: none;
         touch-action: none;
+    -webkit-overflow-scrolling: touch;
     position: relative;
     z-index: 1;
 }
