--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5077,6 +5077,7 @@ and (max-width : 667px) {
     -webkit-box-align: stretch;
         -ms-flex-align: stretch;
             align-items: stretch;
+    position: static;
 }
 
 .draw-signature--main-container--error {
