--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5077,7 +5077,6 @@ and (max-width : 667px) {
     -webkit-box-align: stretch;
         -ms-flex-align: stretch;
             align-items: stretch;
-    position: static;
 }
 
 .draw-signature--main-container--error {
@@ -5146,7 +5145,6 @@ and (max-width : 667px) {
     top: 0;
     left: 0;
     width: 100%;
-    position: static;
 }
 
 .draw-signature--canvas-text-wrapper--invisible {
@@ -5178,7 +5176,7 @@ and (max-width : 667px) {
     cursor: crosshair;
     -ms-touch-action: none;
         touch-action: none;
-    position: relative;
+    overflow: hidden;
     z-index: 1;
 }
 
@@ -5235,7 +5233,6 @@ and (max-width : 667px) {
 .draw-signature--canvas-frame-container {
     width: 100%;
     position: relative;
-    pointer-events: auto !important;
 }
 
 .draw-signature--canvas-reset-button-wrapper-flex {
